# MusicClip

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
lib-audio-rtmp/: build.gradle
lib-audio-rtmp/src/main/cpp/: CMakeLists.txt
lib-audio-rtmp/src/main/res/layout/: activity_audio_rtmp.xml
lib-common/: build.gradle
lib-common/src/androidTest/java/com/tck/av/common/: ExampleInstrumentedTest.kt
lib-common/src/main/java/com/tck/av/common/: AACHeaderAttribute.kt  TLog.kt
lib-common/src/test/java/com/tck/av/common/: ExampleUnitTest.kt
lib-media-extractor/: build.gradle
lib-media-extractor/src/androidTest/java/com/tck/av/extractor/: ExampleInstrumentedTest.kt
lib-media-extractor/src/main/: AndroidManifest.xml
lib-media-extractor/src/main/res/layout/: activity_audio_extractor_home.xml
lib-media-extractor/src/test/java/com/tck/av/extractor/: ExampleUnitTest.kt
lib-pcm-player/: build.gradle
lib-pcm-player/src/main/: AndroidManifest.xml
lib_audio_record/: build.gradle
lib_audio_record/src/main/: AndroidManifest.xml
lib_audio_record/src/main/res/layout/: activity_audio_record_aac_home.xml  activity_audio_record_home.xml  activity_audio_record_pcm_home.xml
lib_ffmpeg/: build.gradle  build_android.sh
lib_ffmpeg/src/main/: AndroidManifest.xml
lib_ffmpeg/src/main/cpp/: CMakeLists.txt  myffmpeg-lib.cpp
lib_media_extractor/: build.gradle
lib_pcm_player/: build.gradle
lib_rtmp_service/: build.gradle
lib_rtmp_service/src/main/: AndroidManifest.xml
lib_rtmp_service/src/main/cpp/: native-lib.cpp
lib_rtmp_service/src/main/cpp/librtmp/: CMakeLists.txt
(+33 files in other folders)
